@@ -46,6 +46,8 @@ For more details about this task and its usage see the <a href="../tutorial/buil
         <td>Yes</td></tr>
     <tr><td>module</td><td>the name of the module to install</td>
         <td>Yes</td></tr>
+    <tr><td>branch</td><td>the branch of the module to install <span class="since">since 2.0</span></td>
+        <td>No, defaults to default branch with exact matcher, '*' with any other matcher</td></tr>
     <tr><td>revision</td><td>the revision of the module to install</td>
         <td>Yes</td></tr>
     <tr><td>validate</td><td>true to force ivy files validation against ivy.xsd, false to force no validation</td>
